--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -17,5 +17,6 @@
 @import "components/content";
 @import "components/footer";
 @import "components/intro";
+@import "components/page";
 @import "components/slider";
 @import "components/tours";
