--- a/resources/scss/base/_colors.scss
+++ b/resources/scss/base/_colors.scss
@@ -1,8 +1,7 @@
+
 //
 // Color system (Bootstrap)
 //
-
-// stylelint-disable
 
 $white:    #fff;
 $gray-100: #f8f9fa;
@@ -16,19 +15,6 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
-$grays: ();
-$grays: map-merge((
-        "100": $gray-100,
-        "200": $gray-200,
-        "300": $gray-300,
-        "400": $gray-400,
-        "500": $gray-500,
-        "600": $gray-600,
-        "700": $gray-700,
-        "800": $gray-800,
-        "900": $gray-900
-), $grays);
-
 $blue:    #007bff;
 $indigo:  #6610f2;
 $purple:  #6f42c1;
@@ -36,47 +22,30 @@ $pink:    #e83e8c;
 $red:     #d9261c;
 $orange:  #fd7e14;
 $yellow:  #fecd1a;
+$sand:    #b29a3b;
 $green:   #28a745;
 $teal:    #20c997;
 $cyan:    #17a2b8;
 
+// Project colors
 
+$brown          : #a04c3c;
+$brown-light    : #af7751;
+$brown-lightest : #ba9880;
 
-$colors: ();
-$colors: map-merge((
-        "blue":       $blue,
-        "indigo":     $indigo,
-        "purple":     $purple,
-        "pink":       $pink,
-        "red":        $red,
-        "orange":     $orange,
-        "yellow":     $yellow,
-        "green":      $green,
-        "teal":       $teal,
-        "cyan":       $cyan,
-        "white":      $white,
-        "gray":       $gray-600,
-        "gray-dark":  $gray-800
-), $colors);
+// Set default colors
 
-$primary:       $yellow;
+$primary:       $brown-light;
+$primary-dark:  $brown;
 $secondary:     $gray-600;
+$info:          $brown-lightest;
 $success:       $green;
-$info:          $cyan;
 $warning:       $yellow;
 $danger:        $red;
 $light:         $gray-100;
 $dark:          $gray-800;
 
-$theme-colors: ();
-$theme-colors: map-merge((
-        "primary":    $primary,
-        "secondary":  $secondary,
-        "success":    $success,
-        "info":       $info,
-        "warning":    $warning,
-        "danger":     $danger,
-        "light":      $light,
-        "dark":       $dark
-), $theme-colors);
+
+
+
 
