--- a/resources/scss/components/_intro.scss
+++ b/resources/scss/components/_intro.scss
@@ -2,6 +2,7 @@
     min-height: 600px;
     padding: 20px;
     position: relative;
+
 }
 
 .intro-image {
@@ -10,9 +11,29 @@
 
 .intro-slider {
     position: absolute;
-    width: 640px;
+    width: 300px;
     max-width: 100%;
-    top: 50%;
     left: 50%;
+    top: 30%;
     transform: translate(-50%, -50%);
+
+    @include screen-min(sm) {
+        width: 480px;
+    }
+
+    @include screen-min(md) {
+        top: 45%;
+        width: 640px;
+    }
+}
+
+.intro-slider-next, .intro-slider-prev {
+
+    &:hover {
+        color: $white;
+        background-color: $primary;
+    }
+
+}
+.intro-text-wrapper {
 }
