adding partner block

--- a/resources/scss/components/_page.scss
+++ b/resources/scss/components/_page.scss
@@ -1,5 +1,5 @@
 .page {
-    margin-top: 56px;
+    padding-top: $mainnav-height;
     display: flex;
     flex-direction: column;
     height: 100vh; /* 1 */
