--- a/resources/scss/components/_tours.scss
+++ b/resources/scss/components/_tours.scss
@@ -6,7 +6,13 @@
 
     .card-group {
         .card {
+
+            background-color: lighten($info, 20);
             @include hover(true);
+
+            .card-footer {
+                border-top: 1px solid $brown;
+            }
         }
     }
 }
