--- a/resources/scss/components/_carousel.scss
+++ b/resources/scss/components/_carousel.scss
@@ -4,6 +4,7 @@
     }
 
     .card {
+        visibility: hidden;
         background-color: lighten($info, 20);
         @include hover(card);
     }
