--- a/resources/scss/components/_slider.scss
+++ b/resources/scss/components/_slider.scss
@@ -1,14 +1,16 @@
 .slider {
     position: relative;
-    min-height: 300px;
+    height: 300px;
     max-width: 100%;
     background-color: gray('500');
     border-radius: $border-radius;
+    overflow-y: hidden;
 
     @include dropshadow();
 
     @include screen-min(sm) {
-        min-height: 380px;
+        height: 380px;
+
     }
 }
 
@@ -58,11 +60,14 @@
 
 .slider-nav {
 
+    visibility: visible;
     text-align: center;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    width: 100%;
+    z-index: -1;
+    width: calc(100% + 60px);
+    left: -30px;
 
     @include screen-min(sm) {
         width: calc(100% + 80px);
