--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -29,6 +29,8 @@
 @import "components/content";
 @import "components/footer";
 @import "components/intro";
+@import "components/logo";
 @import "components/page";
 @import "components/slider";
+@import "components/team";
 @import "components/tours";
