--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -31,6 +31,7 @@
 @import "components/intro";
 @import "components/logo";
 @import "components/page";
+@import "components/pallax";
 @import "components/slider";
 @import "components/team";
 @import "components/tours";
