adding main sectionbg property

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -26,10 +26,10 @@
 @import "components/breadcrumbs";
 @import "components/callout";
 @import "components/carousel";
-@import "components/content";
 @import "components/footer";
 @import "components/intro";
 @import "components/logo";
+@import "components/main";
 @import "components/page";
 @import "components/pallax";
 @import "components/slider";
