--- a/resources/scss/components/_main.scss
+++ b/resources/scss/components/_main.scss
@@ -1,4 +1,5 @@
 .main{
-    background-size: cover;
-    background-repeat: no-repeat;
+    display: block;
+    position: relative;
+    z-index: 1;
 }
