--- a/resources/scss/components/_page.scss
+++ b/resources/scss/components/_page.scss
@@ -1,8 +1,10 @@
 .page {
+    position: relative;
     padding-top: $mainnav-height;
     display: flex;
     flex-direction: column;
     height: 100vh; /* 1 */
+
 }
 
 .page-header, .page-footer {
@@ -19,5 +21,25 @@
 }
 
 .page-content {
+
     flex: 1 0 auto; /* 2 */
+    position: relative;
+
+    /* LUYA admin page property background image settings */
+
+    &-background {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
+
+        &:after {
+            content: '';
+            position: absolute;
+            top:0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: transparentize($white, .4);
+        }
+    }
 }
