--- a/resources/scss/base/_vars.scss
+++ b/resources/scss/base/_vars.scss
@@ -17,6 +17,7 @@ $grid-breakpoints: (
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
+        xs: 320px,
         sm: 540px,
         md: 760px,
         lg: 1020px,
