adding translations, bg image object validation

--- a/resources/scss/components/_intro.scss
+++ b/resources/scss/components/_intro.scss
@@ -8,6 +8,7 @@
     background-position: center;
     background-size: cover;
     &-slider {
+        background-position: bottom center;
         min-height: 480px;
     }
 }
