adding lang nav and icons

--- a/resources/scss/base/_vars.scss
+++ b/resources/scss/base/_vars.scss
@@ -72,3 +72,5 @@ $zindex-tooltip:                    1070;
 
 $mainnav-height:        76px;
 $mainnav-fontsize:      22px;
+
+$flag-icon-css-path: '../../icons';
