styling lang nav

--- a/resources/scss/base/_vars.scss
+++ b/resources/scss/base/_vars.scss
@@ -72,5 +72,6 @@ $zindex-tooltip:                    1070;
 
 $mainnav-height:        76px;
 $mainnav-fontsize:      22px;
+$mainnav-lang-active:   lighten($primary, 35);
 
 $flag-icon-css-path: '../../icons';
