--- a/resources/scss/base/_global.scss
+++ b/resources/scss/base/_global.scss
@@ -1,6 +1,6 @@
 // Global classes delivered by cms
 
 .lang-element-item--active {
-    background-color: lighten($primary, 30);
+    background-color: $mainnav-lang-active;
 
 }
