--- a/resources/scss/components/_page.scss
+++ b/resources/scss/components/_page.scss
@@ -25,7 +25,7 @@
     flex: 1 0 auto; /* 2 */
     position: relative;
 
-    /* LUYA admin page property background image settings */
+    // LUYA admin UI page property background image settings
 
     &-background {
         background-size: cover;
