--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -34,6 +34,7 @@
 @import "components/intro";
 @import "components/logo";
 @import "components/main";
+@import "components/nav";
 @import "components/page";
 @import "components/pallax";
 @import "components/slider";
