--- a/resources/scss/components/_page.scss
+++ b/resources/scss/components/_page.scss
@@ -24,6 +24,7 @@
 
     flex: 1 0 auto; /* 2 */
     position: relative;
+    overflow-x: hidden;
 
     // LUYA admin UI page property background image settings
 
