--- a/resources/scss/components/_intro.scss
+++ b/resources/scss/components/_intro.scss
@@ -34,6 +34,8 @@
 
 .intro-slider-next, .intro-slider-prev {
 
+    background-color: transparentize($info, .7);
+
     &:hover {
         color: $white;
         background-color: $primary;
