--- a/resources/scss/components/_slider.scss
+++ b/resources/scss/components/_slider.scss
@@ -59,8 +59,7 @@
 }
 
 .slider-nav {
-
-    visibility: visible;
+    visibility: hidden;
     text-align: center;
     position: absolute;
     top: 50%;
