--- a/resources/scss/components/_intro.scss
+++ b/resources/scss/components/_intro.scss
@@ -9,7 +9,7 @@
     background-size: cover;
     &-slider {
         background-position: bottom center;
-        min-height: 480px;
+        min-height: 385px;
     }
 }
 
@@ -17,6 +17,7 @@
     visibility: hidden;
     position: absolute;
     width: 320px;
+    min-height: 420px;
     max-width: 100%;
     left: 50%;
     top: 30%;
@@ -34,7 +35,8 @@
 
 .intro-slider-next, .intro-slider-prev {
 
-    background-color: transparentize($info, .7);
+    background-color: transparentize($info, .5);
+    color: transparentize($white, .2);
 
     &:hover {
         color: $white;
