--- a/resources/scss/components/_slider.scss
+++ b/resources/scss/components/_slider.scss
@@ -62,8 +62,7 @@
     visibility: hidden;
     text-align: center;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: calc(50% - 20px);
     z-index: -1;
     width: calc(100% + 60px);
     left: -30px;
