--- a/resources/scss/components/_intro.scss
+++ b/resources/scss/components/_intro.scss
@@ -8,8 +8,10 @@
     background-position: center;
     background-size: cover;
     &-slider {
-        background-position: bottom center;
-        min-height: 385px;
+
+        background-position: center;
+        background-size: cover;
+        min-height: 420px;
     }
 }
 
