remove gulp and nodejs as dependencies; change to unglue.io

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -11,7 +11,7 @@
 @import "base/vars";
 
 // Import flag icons
-@import "../node_modules/flag-icon-css/sass/flag-icon";
+@import "libs/flags/flag-icon";
 
 // Import general base elements
 
